Revision history for Perl module Devel::Ditto

0.06    2012-12-??
        - Added required perl version to Devel::Ditto::Colou?r
        - Reversed order of entries in this file, to most recent first.
        - Added github repo to pod

0.05    2009-05-29
        - Oops - remove spurious warning

0.04    2009-05-29
        - Handle close on STDOUT, STDERR

0.03    2009-05-29
        - Add colour support

0.02    2009-05-29
        - Fix stack depth snafu.

0.01    2009-05-29
        - Initial release.
